{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 155,
  "lineage": "e4b655c6-6b2c-9350-6610-26e9789926f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0661379f23fe9f6b9",
            "arn": "arn:aws:ec2:us-east-1:905418208734:elastic-ip/eipalloc-0661379f23fe9f6b9",
            "association_id": "eipassoc-0f897837f0a765fa8",
            "domain": "vpc",
            "id": "eipalloc-0661379f23fe9f6b9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fa0265a3b5ded674",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-44-215-74-240.compute-1.amazonaws.com",
            "public_ip": "44.215.74.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIP1-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "ElasticIP1-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef70eb9f9c6e8e64",
            "arn": "arn:aws:ec2:us-east-1:905418208734:elastic-ip/eipalloc-0ef70eb9f9c6e8e64",
            "association_id": "eipassoc-0fdc760852a9a6ef5",
            "domain": "vpc",
            "id": "eipalloc-0ef70eb9f9c6e8e64",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03145cb4a9c2edd10",
            "private_dns": "ip-10-0-2-139.ec2.internal",
            "private_ip": "10.0.2.139",
            "public_dns": "ec2-52-71-170-18.compute-1.amazonaws.com",
            "public_ip": "52.71.170.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ElasticIP2-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "ElasticIP2-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:internet-gateway/igw-0cad86cedbb6536bd",
            "id": "igw-0cad86cedbb6536bd",
            "owner_id": "905418208734",
            "tags": {
              "Name": "IGW-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "IGW-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418208734:loadbalancer/app/alb-tf/bc6dda59277a90eb",
            "arn_suffix": "app/alb-tf/bc6dda59277a90eb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-tf-683706029.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418208734:loadbalancer/app/alb-tf/bc6dda59277a90eb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05931ff59ea561178"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ad5b00a3a575c260"
              },
              {
                "subnet_id": "subnet-0b880478dbb4747e7"
              }
            ],
            "subnets": [
              "subnet-0ad5b00a3a575c260",
              "subnet-0b880478dbb4747e7"
            ],
            "tags": {
              "Name": "myALB-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "myALB-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc_id": "vpc-07c87859cec7283b6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg-for-alb",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webtier_lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418208734:listener/app/alb-tf/bc6dda59277a90eb/6e3f9d6a72b17c32",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905418208734:targetgroup/tf-lb-alb-tg/852b2ec6df15df25",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418208734:listener/app/alb-tf/bc6dda59277a90eb/6e3f9d6a72b17c32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905418208734:loadbalancer/app/alb-tf/bc6dda59277a90eb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "alblistner-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "alblistner-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.alb-tg",
            "aws_security_group.sg-for-alb",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905418208734:targetgroup/tf-lb-alb-tg/852b2ec6df15df25",
            "arn_suffix": "targetgroup/tf-lb-alb-tg/852b2ec6df15df25",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905418208734:targetgroup/tf-lb-alb-tg/852b2ec6df15df25",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:905418208734:loadbalancer/app/alb-tf/bc6dda59277a90eb"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-lb-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "myAlbTG-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "myAlbTG-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0661379f23fe9f6b9",
            "association_id": "eipassoc-0f897837f0a765fa8",
            "connectivity_type": "public",
            "id": "nat-004269c16f88fd4de",
            "network_interface_id": "eni-0fa0265a3b5ded674",
            "private_ip": "10.0.1.71",
            "public_ip": "44.215.74.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ad5b00a3a575c260",
            "tags": {
              "Name": "NAT1-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "NAT1-aws_terraform_project",
              "project": "aws_terraform_project"
            }
          },
          "dependencies": [
            "aws_eip.eip-1a",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef70eb9f9c6e8e64",
            "association_id": "eipassoc-0fdc760852a9a6ef5",
            "connectivity_type": "public",
            "id": "nat-068991fe783112b50",
            "network_interface_id": "eni-03145cb4a9c2edd10",
            "private_ip": "10.0.2.139",
            "public_ip": "52.71.170.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b880478dbb4747e7",
            "tags": {
              "Name": "NAT2-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "NAT2-aws_terraform_project",
              "project": "aws_terraform_project"
            }
          },
          "dependencies": [
            "aws_eip.eip-1b",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "routes-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cad86cedbb6536bd",
            "id": "r-rtb-05b37ed305d7c11241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b37ed305d7c1124",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt-public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:route-table/rtb-05dd62b6edee3e54a",
            "id": "rtb-05dd62b6edee3e54a",
            "owner_id": "905418208734",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-004269c16f88fd4de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroutetable-apptier-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "myroutetable-apptier-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-1a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1a",
            "aws_subnet.public_subnet_1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:route-table/rtb-09c687bc3f38bb536",
            "id": "rtb-09c687bc3f38bb536",
            "owner_id": "905418208734",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-068991fe783112b50",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroutetable-apptier-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "myroutetable-apptier-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-1b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1b",
            "aws_subnet.public_subnet_2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:route-table/rtb-05b37ed305d7c1124",
            "id": "rtb-05b37ed305d7c1124",
            "owner_id": "905418208734",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cad86cedbb6536bd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myroutetable-webtier-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "myroutetable-webtier-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ae5b7018b9f13af",
            "route_table_id": "rtb-05dd62b6edee3e54a",
            "subnet_id": "subnet-0bc6068a7ff298955"
          },
          "dependencies": [
            "aws_eip.eip-1a",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1a",
            "aws_route_table.rt-private-1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06084066c4d433ca2",
            "route_table_id": "rtb-09c687bc3f38bb536",
            "subnet_id": "subnet-03ce233a087e9be18"
          },
          "dependencies": [
            "aws_eip.eip-1b",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-1b",
            "aws_route_table.rt-private-2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0f9341750f36fa2",
            "route_table_id": "rtb-05b37ed305d7c1124",
            "subnet_id": "subnet-0ad5b00a3a575c260"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da61dbaa01e8a8ab",
            "route_table_id": "rtb-05b37ed305d7c1124",
            "subnet_id": "subnet-0b880478dbb4747e7"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apptier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:security-group/sg-08f2c4e9405cd38d5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f2c4e9405cd38d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05931ff59ea561178"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20250127143254159200000003",
            "name_prefix": "terraform-",
            "owner_id": "905418208734",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "project": "aws_terraform_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-for-alb",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databasetier-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:security-group/sg-09753b7cf872619e8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-09753b7cf872619e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f2c4e9405cd38d5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250127143258659500000006",
            "name_prefix": "terraform-",
            "owner_id": "905418208734",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "project": "aws_terraform_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.apptier-sg",
            "aws_security_group.sg-for-alb",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-for-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:security-group/sg-05931ff59ea561178",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05931ff59ea561178",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250127143249098800000002",
            "name_prefix": "terraform-",
            "owner_id": "905418208734",
            "revoke_rules_on_delete": false,
            "tags": {
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "project": "aws_terraform_project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:subnet/subnet-0bc6068a7ff298955",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc6068a7ff298955",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418208734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myappsubnet1-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "myappsubnet1-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:subnet/subnet-03ce233a087e9be18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ce233a087e9be18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418208734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myappsubnet2-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "myappsubnet2-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_for_DB_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:subnet/subnet-05668d0acf45fce74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05668d0acf45fce74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418208734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mydbsubnet1-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "mydbsubnet1-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_for_DB_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:subnet/subnet-04893e29cd3c03907",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04893e29cd3c03907",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418208734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mydbsubnet2-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "mydbsubnet2-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:subnet/subnet-0ad5b00a3a575c260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad5b00a3a575c260",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418208734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mywebsubnet1-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "mywebsubnet1-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:subnet/subnet-0b880478dbb4747e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b880478dbb4747e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418208734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mywebsubnet2-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "mywebsubnet2-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "vpc_id": "vpc-07c87859cec7283b6"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418208734:vpc/vpc-07c87859cec7283b6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09bc14c1cc8f6e83f",
            "default_route_table_id": "rtb-06b15ecc896328767",
            "default_security_group_id": "sg-05e9ef3f869df6c70",
            "dhcp_options_id": "dopt-096618316d4ddf733",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c87859cec7283b6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b15ecc896328767",
            "owner_id": "905418208734",
            "tags": {
              "Name": "myVPC-aws_terraform_project",
              "project": "aws_terraform_project"
            },
            "tags_all": {
              "Name": "myVPC-aws_terraform_project",
              "project": "aws_terraform_project"
            }
          }
        }
      ]
    }
  ]
}